Adding InlayHintsProvider SPI.